# orderoracle

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
cli/: helpers.py  main.py
cli/commands/: __init__.py  embed.py  eval.py  pt_export_docs.py  pt_export_topics_qrels.py  report.py
data/: io.py  models.py
embeddings/: base.py  qwen.py  sentence_transformer.py
evaluation/: pipeline.py
metrics/: correlation.py  effectiveness.py
ranking/: rankers.py
utils/: adapter_helper.py
