[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderoracle"
version = "0.1.1"
description = "Evaluate IR test collections by correlating empirical system rankings with an a priori ranking (current specialization: matryoshka embedding dimensions)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Björn Engelmann" }
]
keywords = ["IR", "evaluation", "embeddings", "matryoshka", "ranking", "retrieval"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "typer>=0.9",
  "rich>=13.0",
  "scipy>=1.10",
  "sentence-transformers>=2.5.0",
  "python-terrier>=0.10.0",
  "rbo>=0.1.3",
]

[project.optional-dependencies]
st = [
  "sentence-transformers>=2.5.0",
  "torch>=2.1; platform_machine != 'arm64' or sys_platform != 'darwin'",
]
hf = [
  "transformers>=4.40",
  "torch>=2.1; platform_machine != 'arm64' or sys_platform != 'darwin'",
]
pt = [
  "python-terrier>=0.10.0",
  "ir-measures>=0.3.3",
]
extras = [
  "rbo>=0.1.3",
]
all = [
  "sentence-transformers>=2.5.0",
  "transformers>=4.40",
  "python-terrier>=0.10.0",
  "ir-measures>=0.3.3",
  "rbo>=0.1.3",
  "torch>=2.1; platform_machine != 'arm64' or sys_platform != 'darwin'",
]

[project.urls]
Homepage = "https://github.com/bjoernengelmann/orderoracle"
Repository = "https://github.com/bjoernengelmann/orderoracle"
Issues = "https://github.com/bjoernengelmann/orderoracle/issues"

[project.scripts]
orderoracle = "orderoracle.cli.main:main"

[tool.setuptools]
package-dir = {"orderoracle" = "."}
packages = [
  "orderoracle",
  "orderoracle.cli",
  "orderoracle.cli.commands",
  "orderoracle.data",
  "orderoracle.embeddings",
  "orderoracle.evaluation",
  "orderoracle.metrics",
  "orderoracle.ranking",
  "orderoracle.utils",
]
include-package-data = true

[tool.setuptools.package-data]
orderoracle = ["py.typed"]


